--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<img src="father.jpg" alt="Father">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +9,10 @@
     body {
       margin: 0;
       font-family: 'Merriweather', serif;
-      background-color: #f9f9f9;
+      background-image: url('father.jpg');
+      background-repeat: repeat;
+      background-size: 100px 100px;
+      background-attachment: fixed;
       color: #333;
     }
     header {
@@ -104,7 +106,7 @@
 
   <section class="section" id="about">
     <h2>About the Firm</h2>
-    <p>Tomar Law Associates, located in Hills View Colony, Gwalior, is dedicated to delivering high-quality legal representation in Family Law, Criminal Defense, and Real Estate. Led by Lokendra Singh Tomar, Advocate, the firm has been a pillar of justice and integrity for over three decades.</p>
+    <p>Tomar Law Associates, located in Hills View Colony, Gwalior, is dedicated to delivering high-quality legal representation in Family Law, Criminal Defense, and Real Estate. Led by Lokendra [...]
   </section>
 
   <section class="section" id="services">
