--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
       text-align: center;
       margin: 20px;
     }
+    .area img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
     .area h3 {
       margin: 10px 0;
     }
@@ -106,21 +112,25 @@
 
   <section class="section" id="about">
     <h2>About the Firm</h2>
-    <p>Tomar Law Associates, located in Hills View Colony, Gwalior, is dedicated to delivering high-quality legal representation in Family Law, Criminal Defense, and Real Estate. Led by Lokendra [...]
+    <p>Tomar Law Associates, located in Hills View Colony, Gwalior, is dedicated to delivering high-quality legal representation in Family Law, Criminal Defense, and Real Estate. Led by Lokendra Singh Tomar, the firm has established a reputation for excellence and integrity.</p>
+    <img src="ai-image-url-about" alt="About the Firm">
   </section>
 
   <section class="section" id="services">
     <h2>Practice Areas</h2>
     <div class="practice-areas">
       <div class="area">
+        <img src="ai-image-url-family-law" alt="Family Law">
         <h3>Family Law</h3>
         <p>Expert guidance on divorce, child custody, and family disputes.</p>
       </div>
       <div class="area">
+        <img src="ai-image-url-criminal-defense" alt="Criminal Defense">
         <h3>Criminal Defense</h3>
         <p>Strong representation to protect your legal rights and freedom.</p>
       </div>
       <div class="area">
+        <img src="ai-image-url-real-estate" alt="Real Estate">
         <h3>Real Estate</h3>
         <p>Trusted support in property transactions and land disputes.</p>
       </div>
@@ -132,6 +142,7 @@
     <p><strong>Phone:</strong> +91 9826943953 / +91 9407204773 / +91 9425078688</p>
     <p><strong>Email:</strong> <a href="mailto:lokendratomaradvocate@gmail.com">lokendratomaradvocate@gmail.com</a></p>
     <p><strong>Address:</strong> 61-A Hills View Colony, DD Nagar, Gwalior, Madhya Pradesh, India</p>
+    <img src="ai-image-url-contact" alt="Contact Us">
   </section>
 
   <footer class="footer">
