--- a/index.html
+++ b/index.html
@@ -21,13 +21,6 @@
       padding: 20px;
     }
 
-    header img {
-      width: 150px; /* Adjusted size for the photo */
-      height: auto;
-      border-radius: 15px; /* Frame effect */
-      margin-right: 20px;
-    }
-
     header h1 {
       font-size: 2.5em;
       margin: 0;
@@ -55,7 +48,7 @@
     .hero {
       text-align: center;
       padding: 100px 20px;
-      background: url('https://source.unsplash.com/AI-themed/2121x1414') center/cover no-repeat; /* AI-themed image */
+      background: linear-gradient(135deg, #002147, #004080); /* Removed image */
       color: white;
     }
 
@@ -117,7 +110,6 @@
 </head>
 <body>
   <header>
-    <img src="https://source.unsplash.com/2121x1414/?portrait" alt="Father's Photo">
     <h1>Tomar Law Associates</h1>
   </header>
 
@@ -134,7 +126,7 @@
 
   <div class="section" id="about">
     <h2>About Us</h2>
-    <p>Tomar Law Associates is dedicated to offering the highest standard of legal representation for our clients. With years of experience, we specialize in various areas of law, ensuring justice and professionalism at every step.</p>
+    <p>Tomar Law Associates is dedicated to offering the highest standard of legal representation for our clients. With years of experience, we specialize in various areas of law, ensuring justice and fairness for all.</p>
   </div>
 
   <div class="section" id="areas">
