--- a/index.html
+++ b/index.html
@@ -86,12 +86,8 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 10px;
       overflow: hidden;
-    }
-
-    .area img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
+      background-color: #f4f4f4;
+      padding: 20px;
     }
 
     .area h3 {
@@ -133,15 +129,12 @@
     <h2>Practice Areas</h2>
     <div class="practice-areas">
       <div class="area">
-        <img src="https://source.unsplash.com/250x150/?law" alt="Criminal Law">
         <h3>Criminal Law</h3>
       </div>
       <div class="area">
-        <img src="https://source.unsplash.com/250x150/?justice" alt="Family Law">
         <h3>Family Law</h3>
       </div>
       <div class="area">
-        <img src="https://source.unsplash.com/250x150/?contract" alt="Corporate Law">
         <h3>Corporate Law</h3>
       </div>
     </div>
