--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tomar Law Associates</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #1a73e8, #ff6d01); /* AI-inspired gradient */
+      background: linear-gradient(135deg, #1a73e8, #ff6d01);
       color: #333;
     }
 
     header {
-      display: flex;
-      align-items: center;
       background-color: #002147;
       color: white;
-      padding: 20px;
+      padding: 30px 20px;
+      text-align: center;
     }
 
     header h1 {
-      font-size: 2.5em;
+      font-size: 2.8em;
       margin: 0;
     }
 
@@ -30,15 +29,15 @@
       display: flex;
       justify-content: center;
       background-color: #00162e;
-      padding: 10px 0;
+      padding: 12px 0;
     }
 
     nav a {
       color: white;
-      padding: 14px 20px;
       text-decoration: none;
+      padding: 12px 20px;
       font-weight: bold;
-      transition: background-color 0.3s ease;
+      transition: background 0.3s ease;
     }
 
     nav a:hover {
@@ -47,8 +46,8 @@
 
     .hero {
       text-align: center;
-      padding: 100px 20px;
-      background: linear-gradient(135deg, #002147, #004080); /* Removed image */
+      padding: 80px 20px;
+      background: linear-gradient(135deg, #002147, #004080);
       color: white;
     }
 
@@ -70,29 +69,56 @@
     .section h2 {
       text-align: center;
       color: #002147;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
+    }
+
+    .section p {
+      font-size: 1.1em;
+      line-height: 1.6;
+      text-align: center;
     }
 
     .practice-areas {
       display: flex;
-      justify-content: space-around;
       flex-wrap: wrap;
+      justify-content: space-around;
+      margin-top: 30px;
     }
 
     .area {
-      width: 250px;
-      text-align: center;
-      margin: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-      overflow: hidden;
       background-color: #f4f4f4;
+      width: 280px;
+      margin: 15px;
       padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
     .area h3 {
-      margin-top: 10px;
-      color: #333;
+      margin-bottom: 10px;
+      color: #002147;
+    }
+
+    #contact {
+      background-color: #ffffffc0;
+      padding: 50px 20px;
+      text-align: center;
+    }
+
+    #contact h2 {
+      margin-bottom: 30px;
+      color: #002147;
+    }
+
+    .contact-info p {
+      font-size: 1.1em;
+      margin: 10px 0;
+    }
+
+    .contact-info a {
+      color: #004080;
+      text-decoration: none;
     }
 
     footer {
@@ -105,6 +131,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <h1>Tomar Law Associates</h1>
   </header>
@@ -130,18 +157,31 @@
     <div class="practice-areas">
       <div class="area">
         <h3>Criminal Law</h3>
+        <p>Strategic representation in criminal cases, ensuring your rights are protected at every stage.</p>
       </div>
       <div class="area">
         <h3>Family Law</h3>
+        <p>Legal support for divorce, child custody, maintenance, and inheritance disputes.</p>
       </div>
       <div class="area">
-        <h3>Corporate Law</h3>
+        <h3>Corporate & Real Estate Law</h3>
+        <p>Handling property transactions, legal due diligence, leasing, and corporate contracts.</p>
       </div>
+    </div>
+  </div>
+
+  <div id="contact">
+    <h2>Contact Us</h2>
+    <div class="contact-info">
+      <p><strong>Phone:</strong> +91 9826943953 / +91 9407204773 / +91 9425078688</p>
+      <p><strong>Email:</strong> <a href="mailto:lokendratomaradvocate@gmail.com">lokendratomaradvocate@gmail.com</a></p>
+      <p><strong>Address:</strong> 61-A Hills View Colony, DD Nagar, Gwalior, Madhya Pradesh, India</p>
     </div>
   </div>
 
   <footer>
     <p>&copy; 2025 Tomar Law Associates. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
