--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #1a73e8, #ff6d01);
+      background: #f8f9fa;
       color: #333;
     }
 
     header {
       background-color: #002147;
       color: white;
-      padding: 30px 20px;
+      padding: 40px 20px;
       text-align: center;
     }
 
     header h1 {
-      font-size: 2.8em;
+      font-size: 3em;
       margin: 0;
     }
 
@@ -29,14 +29,15 @@
       display: flex;
       justify-content: center;
       background-color: #00162e;
-      padding: 12px 0;
+      padding: 15px 0;
     }
 
     nav a {
       color: white;
       text-decoration: none;
-      padding: 12px 20px;
+      padding: 14px 25px;
       font-weight: bold;
+      font-size: 1.1em;
       transition: background 0.3s ease;
     }
 
@@ -53,11 +54,11 @@
 
     .hero h1 {
       font-size: 3em;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
 
     .hero p {
-      font-size: 1.2em;
+      font-size: 1.3em;
     }
 
     .section {
@@ -69,21 +70,29 @@
     .section h2 {
       text-align: center;
       color: #002147;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
+      font-size: 2em;
+    }
+
+    .section p {
+      text-align: center;
+      font-size: 1.1em;
+      max-width: 800px;
+      margin: 0 auto;
     }
 
     .practice-areas {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
-      margin-top: 30px;
+      margin-top: 40px;
     }
 
     .area {
-      background-color: #f4f4f4;
+      background-color: white;
       width: 280px;
       margin: 15px;
-      padding: 20px;
+      padding: 25px;
       border-radius: 10px;
       text-align: center;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -94,22 +103,35 @@
       color: #002147;
     }
 
-    #contact {
-      background-color: #ffffffc0;
-      padding: 50px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+    .area p {
+      font-size: 0.95em;
+      color: #555;
     }
 
-    #contact h2 {
-      margin-bottom: 30px;
-      color: #002147;
+    #contact {
+      background-color: #ffffff;
+      padding: 60px 20px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: 40px;
+    }
+
+    .contact-image {
+      max-width: 200px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
 
     .contact-info {
-      flex: 1;
-      margin-left: 20px;
+      max-width: 500px;
+    }
+
+    .contact-info h2 {
+      margin-bottom: 20px;
+      color: #002147;
+      font-size: 2em;
     }
 
     .contact-info p {
@@ -122,17 +144,24 @@
       text-decoration: none;
     }
 
-    .contact-image {
-      max-width: 150px;
-      margin-right: 20px;
-    }
-
     footer {
       background-color: #002147;
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 25px 10px;
       margin-top: 40px;
+      font-size: 0.95em;
+    }
+
+    @media screen and (max-width: 768px) {
+      .practice-areas {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      #contact {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
@@ -155,7 +184,7 @@
 
   <div class="section" id="about">
     <h2>About Us</h2>
-    <p>Tomar Law Associates is dedicated to offering the highest standard of legal representation for our clients. With years of experience, we specialize in various areas of law, ensuring justice is served.</p>
+    <p>Tomar Law Associates is committed to delivering top-notch legal solutions. With deep experience across multiple areas of law, we advocate fiercely for justice, integrity, and your peace of mind.</p>
   </div>
 
   <div class="section" id="areas">
@@ -163,18 +192,21 @@
     <div class="practice-areas">
       <div class="area">
         <h3>Criminal Law</h3>
+        <p>Defending your rights in criminal matters with utmost dedication and expert strategy.</p>
       </div>
       <div class="area">
         <h3>Family Law</h3>
+        <p>Helping you navigate sensitive family issues like divorce, custody, and inheritance smoothly.</p>
       </div>
       <div class="area">
-        <h3>Corporate & Real Estate Law</h3>
+        <h3>Real Estate & Corporate</h3>
+        <p>Advising clients on complex property and business transactions with full legal clarity.</p>
       </div>
     </div>
   </div>
 
   <div id="contact">
-    <img src="path-to-your-fathers-image.jpg" alt="Father" class="contact-image">
+    <img src="father.jpg" alt="Lokendra Singh Tomar" class="contact-image">
     <div class="contact-info">
       <h2>Contact Us</h2>
       <p><strong>Phone:</strong> +91 9826943953 / +91 9407204773 / +91 9425078688</p>
