--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
       padding: 80px 20px;
       background: linear-gradient(135deg, #002147, #004080);
       color: white;
+      position: relative;
+    }
+
+    .hero img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 12px;
+      margin-top: 30px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
 
     .hero h1 {
@@ -65,6 +74,14 @@
       padding: 60px 20px;
       max-width: 1000px;
       margin: auto;
+    }
+
+    .section img {
+      width: 100%;
+      height: auto;
+      border-radius: 12px;
+      margin-bottom: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     }
 
     .section h2 {
@@ -180,9 +197,11 @@
   <div class="hero">
     <h1>Welcome to Tomar Law Associates</h1>
     <p>Providing expert legal services with a personal touch.</p>
+    <img src="hero-image.jpg" alt="Law Office Hero Image">
   </div>
 
   <div class="section" id="about">
+    <img src="about-image.jpg" alt="About Our Law Firm">
     <h2>About Us</h2>
     <p>Tomar Law Associates is committed to delivering top-notch legal solutions. With deep experience across multiple areas of law, we advocate fiercely for justice, integrity, and your peace of mind.</p>
   </div>
@@ -206,7 +225,7 @@
   </div>
 
   <div id="contact">
-    <img src="father.jpg" alt="Lokendra Singh Tomar" class="contact-image">
+    <img src="contact-image.jpg" alt="Lokendra Singh Tomar" class="contact-image">
     <div class="contact-info">
       <h2>Contact Us</h2>
       <p><strong>Phone:</strong> +91 9826943953 / +91 9407204773 / +91 9425078688</p>
