--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
   <div class="hero">
     <h1>Welcome to Tomar Law Associates</h1>
     <p>Providing expert legal services with a personal touch.</p>
-    <img src="hero-image.jpg" alt="Law Office Hero Image">
+    <img src="https://via.placeholder.com/800x400?text=Hero+Image" alt="Law Office Hero Image">
   </div>
 
   <div class="section" id="about">
-    <img src="about-image.jpg" alt="About Our Law Firm">
+    <img src="https://via.placeholder.com/800x400?text=About+Image" alt="About Our Law Firm">
     <h2>About Us</h2>
     <p>Tomar Law Associates is committed to delivering top-notch legal solutions. With deep experience across multiple areas of law, we advocate fiercely for justice, integrity, and your peace of mind.</p>
   </div>
@@ -225,7 +225,7 @@
   </div>
 
   <div id="contact">
-    <img src="contact-image.jpg" alt="Lokendra Singh Tomar" class="contact-image">
+    <img src="https://via.placeholder.com/200x200?text=Contact+Image" alt="Lokendra Singh Tomar" class="contact-image">
     <div class="contact-info">
       <h2>Contact Us</h2>
       <p><strong>Phone:</strong> +91 9826943953 / +91 9407204773 / +91 9425078688</p>
