--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       justify-content: center;
       background-color: #00162e;
       padding: 15px 0;
+      flex-wrap: wrap;
     }
 
     nav a {
@@ -130,6 +131,72 @@
       color: #555;
     }
 
+    .services-list {
+      background-color: #f0f4f8;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    .services-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    .service-item {
+      background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .law-images {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 40px;
+    }
+
+    .law-image {
+      width: 300px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .gallery {
+      padding: 60px 20px;
+      background-color: #fff;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .gallery h2 {
+      text-align: center;
+      color: #002147;
+      margin-bottom: 30px;
+    }
+
+    .gallery-images {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      justify-items: center;
+    }
+
+    .gallery-image {
+      width: 100%;
+      max-width: 300px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
     #contact {
       background-color: #ffffff;
       padding: 60px 20px;
@@ -166,6 +233,24 @@
       text-decoration: none;
     }
 
+    .association {
+      padding: 60px 20px;
+      background-color: #f8f9fa;
+      text-align: center;
+    }
+
+    .association h2 {
+      color: #002147;
+      margin-bottom: 20px;
+    }
+
+    .association p {
+      font-size: 1.1em;
+      color: #333;
+      max-width: 800px;
+      margin: auto;
+    }
+
     footer {
       background-color: #002147;
       color: white;
@@ -175,59 +260,10 @@
       font-size: 0.95em;
     }
 
-    .services-list {
-      background-color: #f0f4f8;
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    .services-list h2 {
-      color: #002147;
-      margin-bottom: 30px;
-    }
-
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    .service-item {
-      background-color: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-
-    .law-images {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 40px;
-    }
-
-    .law-image {
-      width: 300px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-
     @media screen and (max-width: 768px) {
-      .practice-areas {
+      .practice-areas, #contact, .services-grid, .gallery-images {
         flex-direction: column;
         align-items: center;
-      }
-
-      #contact {
-        flex-direction: column;
-      }
-
-      .services-grid {
         grid-template-columns: 1fr;
       }
     }
@@ -243,6 +279,8 @@
     <a href="#about">About Us</a>
     <a href="#areas">Practice Areas</a>
     <a href="#services">Our Services</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#association">In Association</a>
     <a href="#contact">Contact</a>
   </nav>
 
@@ -256,7 +294,6 @@
   <div class="section" id="about">
     <h2>About Us</h2>
     <p>Tomar Law Associates is committed to delivering top-notch legal solutions. With deep experience across multiple areas of law, we advocate fiercely for justice, integrity, and your peace of mind.</p>
-    
     <div class="law-images">
       <img src="https://images.unsplash.com/photo-1558002038-1055907df827?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Courtroom" class="law-image">
       <img src="https://images.unsplash.com/photo-1589391886645-d51941baf7fb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Legal documents" class="law-image">
@@ -284,58 +321,39 @@
 
   <div class="services-list" id="services">
     <h2>Our Legal Services</h2>
-    <p>Thank you for contacting M.P. High Court Advocate Lokendra Singh Tomar. Please let us know how we can help you with:</p>
-    
     <div class="services-grid">
-      <div class="service-item">
-        <h3>Criminal Cases</h3>
-        <p>Expert defense in all criminal matters</p>
-      </div>
-      <div class="service-item">
-        <h3>Bail Application</h3>
-        <p>Professional assistance in bail matters</p>
-      </div>
-      <div class="service-item">
-        <h3>Suspension</h3>
-        <p>Legal solutions for suspension cases</p>
-      </div>
-      <div class="service-item">
-        <h3>Family Matters</h3>
-        <p>Comprehensive family law services</p>
-      </div>
-      <div class="service-item">
-        <h3>Domestic Violence</h3>
-        <p>Protection and legal remedies</p>
-      </div>
-      <div class="service-item">
-        <h3>Maintenance</h3>
-        <p>Expert handling of maintenance cases</p>
-      </div>
-      <div class="service-item">
-        <h3>Divorce</h3>
-        <p>Guidance through divorce proceedings</p>
-      </div>
-      <div class="service-item">
-        <h3>Habeas Corpus</h3>
-        <p>Protection of personal liberty</p>
-      </div>
-      <div class="service-item">
-        <h3>Writ Petition</h3>
-        <p>Constitutional remedies</p>
-      </div>
-      <div class="service-item">
-        <h3>Misc. Petition</h3>
-        <p>Various legal petitions</p>
-      </div>
-      <div class="service-item">
-        <h3>POCSO Specialist</h3>
-        <p>Expert in Protection of Children from Sexual Offences cases</p>
-      </div>
-      <div class="service-item">
-        <h3>Marriage</h3>
-        <p>Legal advice on marriage matters</p>
-      </div>
+      <div class="service-item"><h3>Criminal Cases</h3><p>Expert defense in all criminal matters</p></div>
+      <div class="service-item"><h3>Bail Application</h3><p>Professional assistance in bail matters</p></div>
+      <div class="service-item"><h3>Suspension</h3><p>Legal solutions for suspension cases</p></div>
+      <div class="service-item"><h3>Family Matters</h3><p>Comprehensive family law services</p></div>
+      <div class="service-item"><h3>Domestic Violence</h3><p>Protection and legal remedies</p></div>
+      <div class="service-item"><h3>Maintenance</h3><p>Expert handling of maintenance cases</p></div>
+      <div class="service-item"><h3>Divorce</h3><p>Guidance through divorce proceedings</p></div>
+      <div class="service-item"><h3>Habeas Corpus</h3><p>Protection of personal liberty</p></div>
+      <div class="service-item"><h3>Writ Petition</h3><p>Constitutional remedies</p></div>
+      <div class="service-item"><h3>Misc. Petition</h3><p>Various legal petitions</p></div>
+      <div class="service-item"><h3>POCSO Specialist</h3><p>Expert in Protection of Children from Sexual Offences cases</p></div>
+      <div class="service-item"><h3>Marriage</h3><p>Legal advice on marriage matters</p></div>
     </div>
+  </div>
+
+  <div class="gallery" id="gallery">
+    <h2>Photo Gallery</h2>
+    <div class="gallery-images">
+      <img src="gallery1.jpg" alt="Event 1" class="gallery-image">
+      <img src="gallery2.jpg" alt="Event 2" class="gallery-image">
+      <img src="gallery3.jpg" alt="Event 3" class="gallery-image">
+      <img src="gallery4.jpg" alt="Event 4" class="gallery-image">
+      <img src="gallery5.jpg" alt="Event 5" class="gallery-image">
+      <img src="gallery6.jpg" alt="Event 6" class="gallery-image">
+    </div>
+  </div>
+
+  <div class="association" id="association">
+    <h2>In Association With</h2>
+    <p>
+      Narendra Pal Pawaiya, Kamlesh Kulshrestha, Dharmendra Parmar, Kuldeep Dandotia, Anuj Tiwari, Sachin Srivastava, Naresh Rathore, Satendra Singh Tomar, Divya Pratap Singh Tomar Advocate
+    </p>
   </div>
 
   <div id="contact">
