--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@
   <div class="gallery" id="gallery">
     <h2>Photo Gallery</h2>
     <div class="gallery-images">
-      <img src="gallery1.jpg" alt="Event 1" class="gallery-image">
-      <img src="gallery2.jpg" alt="Event 2" class="gallery-image">
-      <img src="gallery3.jpg" alt="Event 3" class="gallery-image">
-      <img src="gallery4.jpg" alt="Event 4" class="gallery-image">
-      <img src="gallery5.jpg" alt="Event 5" class="gallery-image">
-      <img src="gallery6.jpg" alt="Event 6" class="gallery-image">
+      <img src="gallery/image1.jpg" alt="Gallery 1" class="gallery-image">
+      <img src="gallery/image2.jpg" alt="Gallery 2" class="gallery-image">
+      <img src="gallery/image3.jpg" alt="Gallery 3" class="gallery-image">
+      <img src="gallery/image4.jpg" alt="Gallery 4" class="gallery-image">
+      <img src="gallery/image5.jpg" alt="Gallery 5" class="gallery-image">
+      <img src="gallery/image6.jpg" alt="Gallery 6" class="gallery-image">
     </div>
   </div>
 
