--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
     <h2>About Us</h2>
     <p>Tomar Law Associates is committed to delivering top-notch legal solutions. With deep experience across multiple areas of law, we advocate fiercely for justice, integrity, and your peace of mind.</p>
     <div class="law-images">
-      <img src="https://images.unsplash.com/photo-1558002038-1055907df827?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Courtroom" class="law-image">
-      <img src="https://images.unsplash.com/photo-1589391886645-d51941baf7fb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Legal documents" class="law-image">
-      <img src="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Judge's gavel" class="law-image">
+      <img src="gallery/image1.jpg" alt="Courtroom" class="law-image">
+      <img src="gallery/image2.jpg" alt="Legal documents" class="law-image">
+      <img src="gallery/image3.jpg" alt="Judge's gavel" class="law-image">
     </div>
   </div>
 
