--- a/index.html
+++ b/index.html
@@ -99,75 +99,6 @@
       margin: 0 auto;
     }
 
-    .practice-areas {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      margin-top: 40px;
-    }
-
-    .area {
-      background-color: white;
-      width: 280px;
-      margin: 15px;
-      padding: 25px;
-      border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
-    }
-
-    .area:hover {
-      transform: translateY(-5px);
-    }
-
-    .area h3 {
-      margin-bottom: 10px;
-      color: #002147;
-    }
-
-    .area p {
-      font-size: 0.95em;
-      color: #555;
-    }
-
-    .services-list {
-      background-color: #f0f4f8;
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    .service-item {
-      background-color: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-
-    .law-images {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 40px;
-    }
-
-    .law-image {
-      width: 300px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-
     .gallery {
       padding: 60px 20px;
       background-color: #fff;
@@ -197,60 +128,6 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
-    #contact {
-      background-color: #ffffff;
-      padding: 60px 20px;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
-      gap: 40px;
-    }
-
-    .contact-image {
-      max-width: 200px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
-
-    .contact-info {
-      max-width: 500px;
-    }
-
-    .contact-info h2 {
-      margin-bottom: 20px;
-      color: #002147;
-      font-size: 2em;
-    }
-
-    .contact-info p {
-      font-size: 1.1em;
-      margin: 10px 0;
-    }
-
-    .contact-info a {
-      color: #004080;
-      text-decoration: none;
-    }
-
-    .association {
-      padding: 60px 20px;
-      background-color: #f8f9fa;
-      text-align: center;
-    }
-
-    .association h2 {
-      color: #002147;
-      margin-bottom: 20px;
-    }
-
-    .association p {
-      font-size: 1.1em;
-      color: #333;
-      max-width: 800px;
-      margin: auto;
-    }
-
     footer {
       background-color: #002147;
       color: white;
@@ -260,13 +137,6 @@
       font-size: 0.95em;
     }
 
-    @media screen and (max-width: 768px) {
-      .practice-areas, #contact, .services-grid, .gallery-images {
-        flex-direction: column;
-        align-items: center;
-        grid-template-columns: 1fr;
-      }
-    }
   </style>
 </head>
 <body>
@@ -280,7 +150,6 @@
     <a href="#areas">Practice Areas</a>
     <a href="#services">Our Services</a>
     <a href="#gallery">Gallery</a>
-    <a href="#association">In Association</a>
     <a href="#contact">Contact</a>
   </nav>
 
@@ -291,78 +160,15 @@
     </div>
   </div>
 
-  <div class="section" id="about">
-    <h2>About Us</h2>
-    <p>Tomar Law Associates is committed to delivering top-notch legal solutions. With deep experience across multiple areas of law, we advocate fiercely for justice, integrity, and your peace of mind.</p>
-    <div class="law-images">
-      <img src="gallery/image1.jpg" alt="Courtroom" class="law-image">
-      <img src="gallery/image2.jpg" alt="Legal documents" class="law-image">
-      <img src="gallery/image3.jpg" alt="Judge's gavel" class="law-image">
-    </div>
-  </div>
-
-  <div class="section" id="areas">
-    <h2>Practice Areas</h2>
-    <div class="practice-areas">
-      <div class="area">
-        <h3>Criminal Law</h3>
-        <p>Defending your rights in criminal matters with utmost dedication and expert strategy.</p>
-      </div>
-      <div class="area">
-        <h3>Family Law</h3>
-        <p>Helping you navigate sensitive family issues like divorce, custody, and inheritance smoothly.</p>
-      </div>
-      <div class="area">
-        <h3>Real Estate & Corporate</h3>
-        <p>Advising clients on complex property and business transactions with full legal clarity.</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="services-list" id="services">
-    <h2>Our Legal Services</h2>
-    <div class="services-grid">
-      <div class="service-item"><h3>Criminal Cases</h3><p>Expert defense in all criminal matters</p></div>
-      <div class="service-item"><h3>Bail Application</h3><p>Professional assistance in bail matters</p></div>
-      <div class="service-item"><h3>Suspension</h3><p>Legal solutions for suspension cases</p></div>
-      <div class="service-item"><h3>Family Matters</h3><p>Comprehensive family law services</p></div>
-      <div class="service-item"><h3>Domestic Violence</h3><p>Protection and legal remedies</p></div>
-      <div class="service-item"><h3>Maintenance</h3><p>Expert handling of maintenance cases</p></div>
-      <div class="service-item"><h3>Divorce</h3><p>Guidance through divorce proceedings</p></div>
-      <div class="service-item"><h3>Habeas Corpus</h3><p>Protection of personal liberty</p></div>
-      <div class="service-item"><h3>Writ Petition</h3><p>Constitutional remedies</p></div>
-      <div class="service-item"><h3>Misc. Petition</h3><p>Various legal petitions</p></div>
-      <div class="service-item"><h3>POCSO Specialist</h3><p>Expert in Protection of Children from Sexual Offences cases</p></div>
-      <div class="service-item"><h3>Marriage</h3><p>Legal advice on marriage matters</p></div>
-    </div>
-  </div>
-
   <div class="gallery" id="gallery">
     <h2>Photo Gallery</h2>
     <div class="gallery-images">
-      <img src="gallery/image1.jpg" alt="Gallery 1" class="gallery-image">
-      <img src="gallery/image2.jpg" alt="Gallery 2" class="gallery-image">
-      <img src="gallery/image3.jpg" alt="Gallery 3" class="gallery-image">
-      <img src="gallery/image4.jpg" alt="Gallery 4" class="gallery-image">
-      <img src="gallery/image5.jpg" alt="Gallery 5" class="gallery-image">
-      <img src="gallery/image6.jpg" alt="Gallery 6" class="gallery-image">
-    </div>
-  </div>
-
-  <div class="association" id="association">
-    <h2>In Association With</h2>
-    <p>
-      Narendra Pal Pawaiya, Kamlesh Kulshrestha, Dharmendra Parmar, Kuldeep Dandotia, Anuj Tiwari, Sachin Srivastava, Naresh Rathore, Satendra Singh Tomar, Divya Pratap Singh Tomar Advocate
-    </p>
-  </div>
-
-  <div id="contact">
-    <img src="father.jpg" alt="Lokendra Singh Tomar" class="contact-image">
-    <div class="contact-info">
-      <h2>Contact Us</h2>
-      <p><strong>Phone:</strong> +91 9826943953 / +91 9407204773 / +91 9425078688</p>
-      <p><strong>Email:</strong> <a href="mailto:lokendratomaradvocate@gmail.com">lokendratomaradvocate@gmail.com</a></p>
-      <p><strong>Address:</strong> 61-A Hills View Colony, DD Nagar, Gwalior, Madhya Pradesh, India</p>
+      <img src="gallery1.jpg.jpg" alt="Gallery 1" class="gallery-image">
+      <img src="gallery2.jpg.jpg" alt="Gallery 2" class="gallery-image">
+      <img src="gallery3.jpg.jpg" alt="Gallery 3" class="gallery-image">
+      <img src="gallery4.jpg.jpg" alt="Gallery 4" class="gallery-image">
+      <img src="gallery5.jpg.jpg" alt="Gallery 5" class="gallery-image">
+      <img src="gallery6.jpg.jpg" alt="Gallery 6" class="gallery-image">
     </div>
   </div>
 
