--- a/index.html
+++ b/index.html
@@ -160,16 +160,39 @@
     </div>
   </div>
 
+  <div class="section" id="about">
+    <h2>About Us</h2>
+    <p>Tomar Law Associates is a reputed law firm dedicated to providing outstanding legal counsel in Criminal Law, Family Law, and Real Estate/Corporate Law. With a legacy of trust and a team of experienced professionals, we stand by your side every step of the way.</p>
+  </div>
+
+  <div class="section" id="areas">
+    <h2>Practice Areas</h2>
+    <p>Our firm specializes in Criminal Law, Family Law, and Real Estate/Corporate Law. We provide strategic legal solutions tailored to your needs, backed by years of courtroom experience and legal insight.</p>
+  </div>
+
+  <div class="section" id="services">
+    <h2>Our Services</h2>
+    <p>Whether you're dealing with legal disputes, contract negotiations, property matters, or family issues, our firm is here to offer the support and expertise you need. We pride ourselves on professionalism, discretion, and results.</p>
+  </div>
+
   <div class="gallery" id="gallery">
     <h2>Photo Gallery</h2>
     <div class="gallery-images">
-      <img src="gallery1.jpg.jpg" alt="Gallery 1" class="gallery-image">
-      <img src="gallery2.jpg.jpg" alt="Gallery 2" class="gallery-image">
-      <img src="gallery3.jpg.jpg" alt="Gallery 3" class="gallery-image">
-      <img src="gallery4.jpg.jpg" alt="Gallery 4" class="gallery-image">
-      <img src="gallery5.jpg.jpg" alt="Gallery 5" class="gallery-image">
-      <img src="gallery6.jpg.jpg" alt="Gallery 6" class="gallery-image">
+      <img src="gallery/image1.jpg" alt="Gallery 1" class="gallery-image">
+      <img src="gallery/image2.jpg" alt="Gallery 2" class="gallery-image">
+      <img src="gallery/image3.jpg" alt="Gallery 3" class="gallery-image">
+      <img src="gallery/image4.jpg" alt="Gallery 4" class="gallery-image">
+      <img src="gallery/image5.jpg" alt="Gallery 5" class="gallery-image">
+      <img src="gallery/image6.jpg" alt="Gallery 6" class="gallery-image">
     </div>
+  </div>
+
+  <div class="section" id="contact">
+    <h2>Contact Us</h2>
+    <p>Reach out to Tomar Law Associates for personalized legal assistance. You can contact us at:<br><br>
+    <strong>Phone:</strong> +91-9876543210<br>
+    <strong>Email:</strong> info@tomarlaw.com<br>
+    <strong>Address:</strong> 123 Law Street, New Delhi, India</p>
   </div>
 
   <footer>
