--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tomar Law Associates</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: #f8f9fa;
+      background: #f1f4f8;
       color: #333;
     }
 
@@ -18,6 +22,7 @@
       color: white;
       padding: 40px 20px;
       text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
     header h1 {
@@ -31,6 +36,9 @@
       background-color: #00162e;
       padding: 15px 0;
       flex-wrap: wrap;
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
 
     nav a {
@@ -54,24 +62,8 @@
       position: relative;
     }
 
-    .hero::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: url('https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') center/cover;
-      opacity: 0.3;
-    }
-
-    .hero-content {
-      position: relative;
-      z-index: 1;
-    }
-
     .hero h1 {
-      font-size: 3em;
+      font-size: 3.5em;
       margin-bottom: 15px;
     }
 
@@ -89,7 +81,7 @@
       text-align: center;
       color: #002147;
       margin-bottom: 40px;
-      font-size: 2em;
+      font-size: 2.2em;
     }
 
     .section p {
@@ -97,35 +89,6 @@
       font-size: 1.1em;
       max-width: 800px;
       margin: 0 auto;
-    }
-
-    .gallery {
-      padding: 60px 20px;
-      background-color: #fff;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .gallery h2 {
-      text-align: center;
-      color: #002147;
-      margin-bottom: 30px;
-    }
-
-    .gallery-images {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      justify-items: center;
-    }
-
-    .gallery-image {
-      width: 100%;
-      max-width: 300px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
     footer {
@@ -137,6 +100,45 @@
       font-size: 0.95em;
     }
 
+    .contact {
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .contact h2 {
+      color: #002147;
+    }
+
+    .contact-info {
+      margin: 20px 0;
+      font-size: 1.1em;
+    }
+
+    .floating-buttons {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      z-index: 100;
+    }
+
+    .floating-buttons a {
+      background-color: #25D366;
+      color: white;
+      padding: 12px 16px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      display: flex;
+      align-items: center;
+    }
+
+    .floating-buttons a.call {
+      background-color: #007bff;
+    }
   </style>
 </head>
 <body>
@@ -146,53 +148,32 @@
   </header>
 
   <nav>
-    <a href="#about">About Us</a>
-    <a href="#areas">Practice Areas</a>
-    <a href="#services">Our Services</a>
-    <a href="#gallery">Gallery</a>
+    <a href="#about">About</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <div class="hero">
-    <div class="hero-content">
-      <h1>Welcome to Tomar Law Associates</h1>
-      <p>Providing expert legal services with a personal touch.</p>
-    </div>
+    <h1>Welcome to Tomar Law Associates</h1>
+    <p>Expert Legal Representation by Lokendra Singh Tomar</p>
   </div>
 
   <div class="section" id="about">
-    <h2>About Us</h2>
-    <p>Tomar Law Associates is a reputed law firm dedicated to providing outstanding legal counsel in Criminal Law, Family Law, and Real Estate/Corporate Law. With a legacy of trust and a team of experienced professionals, we stand by your side every step of the way.</p>
+    <h2>About Our Association</h2>
+    <p>The association includes Narendra Pal Pawaiya, Kamlesh Kulshrestha, Dharmendra Parmar, Kuldeep Dandotia, Anuj Tiwari, Sachin Srivastava, Naresh Rathore, Satendra Singh Tomar, Divya Pratap Singh Tomar Advocate, and is led by Lokendra Singh Tomar.</p>
   </div>
 
-  <div class="section" id="areas">
-    <h2>Practice Areas</h2>
-    <p>Our firm specializes in Criminal Law, Family Law, and Real Estate/Corporate Law. We provide strategic legal solutions tailored to your needs, backed by years of courtroom experience and legal insight.</p>
-  </div>
-
-  <div class="section" id="services">
-    <h2>Our Services</h2>
-    <p>Whether you're dealing with legal disputes, contract negotiations, property matters, or family issues, our firm is here to offer the support and expertise you need. We pride ourselves on professionalism, discretion, and results.</p>
-  </div>
-
-  <div class="gallery" id="gallery">
-    <h2>Photo Gallery</h2>
-    <div class="gallery-images">
-      <img src="gallery/image1.jpg" alt="Gallery 1" class="gallery-image">
-      <img src="gallery/image2.jpg" alt="Gallery 2" class="gallery-image">
-      <img src="gallery/image3.jpg" alt="Gallery 3" class="gallery-image">
-      <img src="gallery/image4.jpg" alt="Gallery 4" class="gallery-image">
-      <img src="gallery/image5.jpg" alt="Gallery 5" class="gallery-image">
-      <img src="gallery/image6.jpg" alt="Gallery 6" class="gallery-image">
+  <div class="contact" id="contact">
+    <h2>Contact</h2>
+    <div class="contact-info">
+      <p><strong>Address:</strong> 61-A Hills View Colony, DD Nagar, Gwalior, M.P., India</p>
+      <p><strong>Phone:</strong> +91-9826943953, +91-9425078688, +91-9407204773</p>
+      <p><strong>Email:</strong> example@email.com</p>
     </div>
   </div>
 
-  <div class="section" id="contact">
-    <h2>Contact Us</h2>
-    <p>Reach out to Tomar Law Associates for personalized legal assistance. You can contact us at:<br><br>
-    <strong>Phone:</strong> +91-9876543210<br>
-    <strong>Email:</strong> info@tomarlaw.com<br>
-    <strong>Address:</strong> 123 Law Street, New Delhi, India</p>
+  <div class="floating-buttons">
+    <a href="tel:+919826943953" class="call">📞 Call Us</a>
+    <a href="https://wa.me/919826943953" target="_blank">💬 WhatsApp</a>
   </div>
 
   <footer>
