--- a/index.html
+++ b/index.html
@@ -96,6 +96,23 @@
       line-height: 1.6;
     }
 
+    .blue-box {
+      background-color: #004080;
+      color: white;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      max-width: 500px;
+      margin: 40px auto;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    .blue-box img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+
     footer {
       background-color: #004080;
       color: white;
@@ -179,6 +196,11 @@
   <div class="section" id="about">
     <h2>About Our Association</h2>
     <p>The association includes Narendra Pal Pawaiya, Kamlesh Kulshrestha, Dharmendra Parmar, Kuldeep Dandotia, Anuj Tiwari, Sachin Srivastava, Naresh Rathore, Satendra Singh Tomar, Divya Pratap Singh Tomar Advocate, and is led by Lokendra Singh Tomar.</p>
+  </div>
+
+  <div class="blue-box">
+    <h2>Our Featured Image</h2>
+    <img src="gallery6.jpg.jpg" alt="Featured Image">
   </div>
 
   <div class="contact" id="contact">
