--- a/index.html
+++ b/index.html
@@ -58,21 +58,26 @@
 
     .hero {
       text-align: center;
-      padding: 100px 20px;
-      color: white;
       background: url('image7.jpg.jpg') no-repeat center center/cover;
+      height: 400px;
       position: relative;
     }
 
-    .hero h1 {
-      font-size: 4em;
-      margin-bottom: 20px;
-      text-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    .hero-content {
+      text-align: center;
+      margin-top: 20px;
     }
 
-    .hero p {
+    .hero-content h1 {
+      font-size: 3em;
+      margin: 10px 0;
+      color: #004080;
+    }
+
+    .hero-content p {
       font-size: 1.5em;
-      text-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+      color: #333;
+      margin: 0;
     }
 
     .section {
@@ -201,7 +206,9 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <div class="hero">
+  <div class="hero"></div>
+
+  <div class="hero-content">
     <h1>Welcome to Tomar Law Associates</h1>
     <p>Expert Legal Representation by Lokendra Singh Tomar</p>
   </div>
