--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
     <h2>Photo Gallery</h2>
     <div class="gallery-images">
       <img src="gallery/gallery1.jpg.jpg" alt="Gallery 1">
-      <img src="gallery/gallery2.jpg.jpg" alt="Gallery 2">
-      <img src="gallery/gallery3.jpg.jpg" alt="Gallery 3">
-      <img src="gallery/gallery4.jpg.jpg" alt="Gallery 4">
-      <img src="gallery/gallery5.jpg.jpg" alt="Gallery 5">
+      <img src="https://via.placeholder.com/300x200" alt="Gallery 2">
+      <img src="https://via.placeholder.com/300x200" alt="Gallery 3">
+      <img src="https://via.placeholder.com/300x200" alt="Gallery 4">
+      <img src="https://via.placeholder.com/300x200" alt="Gallery 5">
     </div>
   </div>
 
